<?php

namespace App\Models;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class File extends Model
{
    use HasFactory;
    protected $table = 'uploded_files';
    protected $guarded = [];

    public function documents (){
        return $this->belongsTo(Document::class);
    }
}
